storage/innobase/buf/buf0buf.cc
@@ -7402,6 +7402,7 @@ buf_page_encrypt_before_write(
 
 		bpage->real_size = out_len;
 
+		memset(tmp + out_len, 0 , srv_page_size - out_len);
 #ifdef UNIV_DEBUG
 		fil_page_type_validate(tmp);
 #endif
